yamls/hyperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperf
  labels:
    app: hyperf
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperf
      version: v1
  template:
    metadata:
      labels:
        app: hyperf
        version: v1
    spec:
      containers:
      - name: details
        image: hyperf:test
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9501
