yamls/hyperf-sercvice.yml
apiVersion: v1
kind: Service
metadata:
  name: hyperf
  labels:
    app: hyperf
    service: hyperf
spec:
  ports:
  - port: 9501
    name: http
  selector:
    app: hyperf
